--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,23 +1,40 @@
-name: Generate Datas
+name: Generate animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  # run automaticaly every 24 hours
+  schedule: 
+    - cron: "* */24 * * *"
+
+  # allows to manually run the job at any time 
   workflow_dispatch:
 
+  # run on every push on the master branch
+  push:
+    branches:
+    - master
+
+
 jobs:
-  build:
-    name: Jobs to update datas
-    runs-on: ubuntu-latest
+  generate:
+    permissions:
+      contents: write
+    runs-on: ubunto-latest
+    timeout-minutes: 5
+    
     steps:
       # Snake Animation
-      - uses: Platane/snk@master
-        id: snake-gif
+      - name: generate github-contribution-grid-snake.svg
+        uses: Planate/snk/svg-only@v3
         with:
           github_user_name: Vitinho0102
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+          outputs:
+            dist/github-contribution-grid-snake-svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          
+      #
+      #
+      - name: push github-contribution-grid-snake-svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
