--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,9 +1,9 @@
-name: Generate animation
+name: generate animation
 
 on:
   # run automaticaly every 24 hours
   schedule: 
-    - cron: "* */24 * * *"
+    - cron: "0 */24 * * *"
 
   # allows to manually run the job at any time 
   workflow_dispatch:
@@ -32,7 +32,7 @@ jobs:
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
           
       # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user/<repository>/<target_branch>/<file> or as a 
+      # the content will be available at https://raw.githubusercontent.com/<github_user/<repository>/<target_branch>/<file> or as github page 
       - name: push github-contribution-grid-snake-svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
